--- a/style.css
+++ b/style.css
@@ -4,13 +4,19 @@ body {
 	margin: 0;
 	padding: 0;
 }
+.clearfix:before,
+.clearfix:after {
+  content: "";
+  display: table;
+  clear: both;
+}
 .board {
 	width: 100%;
 	max-width: 1200px;
 	height: auto;
 	margin: 20px auto;
 	border: 2px dotted green;
-	border-radius: 20px;
+	border-radius: 10px;
 }
 .board h1 {
 	color: green;
@@ -19,20 +25,28 @@ body {
 }
 .create-column {
 	padding: 10px;
-	margin: 0 20px;
+	margin: 20px;
 	border-radius: 10px;
 	background-color: #51a8d1;
 }
-.column {
+/*.column {
 	float: left;
 	display: inline-block;
 	width: 33.33%;
-}
+	padding-bottom: 50px;
+}*/
 .column-container {
 	text-align: center;	
 	background-color: lightyellow;
-	height: 70vh;
+	min-width: 500px;
+	padding-bottom: 20px;
 	width: 100%;
+	display: inline-flex;
+}
+.column {
+	flex: 1;
+	justify-content: space-between;
+	padding-bottom: 50px;
 }
 .column-container .add-card {
 	padding: 10px;
@@ -46,20 +60,19 @@ body {
 } 
 .column ul {
 	list-style: none;
-	margin: 20px;
 	border: none;
 }
 .column ul:last-child {
-	margin-right: 20px;
+	margin-right: 40px;
 }
 .card {
 	border: 1px dashed #ccc;
 	background-color: #fff;
 	margin: 10px auto;
+	width: 100%;
 }
 .card .btn-delete {
 	float: left;
-
 }
 
 .card-placeholder {
